I am having huge issue not getting the text cut off on mobile

--- a/style.css
+++ b/style.css
@@ -376,13 +376,14 @@
 			-moz-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			-moz-text-fill-color: transparent;
+			overflow: hidden;
 
 		}
 
 		.main__img--container {
 
-/*			transform: rotate(90deg); */
-	padding: 100px;
+			
+			padding: 100px;
 			text-align: center;
 			object-fit: cover;
 
@@ -391,7 +392,16 @@
 		/* Mobile support for the cover page */
 
 	@media screen and (max-width: 768px) {
+
+
+		.main {
+
+			overflow: hidden;
+
+		}
+		
 		.main__container {
+			
 
 			display: grid;
 		/* we want the space to the right and left as well as top and bottom to be the same */
@@ -400,18 +410,36 @@
 		justify-self: center;
 		/* background-image: linear-gradient(#43cea2 , #185a9d); */
 	
-		width: 100%
+
+
 		margin: 0 auto;
+		
 		height: 90vh;
-		max-width: 1300px;
-		padding: 0 100px;
+		
+		padding: 0 50px;
 		}
 
 		.main__content h1 {
 
-			font-size: 2rem;
-			margin-top: 1.5rem;
+			font-size: 3rem;
+			width: auto;
+			text-align: center;
+			word-wrap: break-word;
+			
+			
 		}
+
+		.main__img--container {
+
+			
+			padding: 0px;
+			text-align: center;
+			transform: scale(0.8, 0.8);
+			-ms-transform: scale(0.8, 0.8);
+			-webkit-transform: scale(0.8, 0.8);
+
+		}
+		
 	}
 		
 
